# lingmo-installer

./: .gitignore  README.md  demo.json  meson.build  recipe.json
lingmo_installer/: lingmo-installer-processor.in  lingmo-installer.gresource.xml  lingmo-installer.in  main.py  meson.build
lingmo_installer/assets/: CREDITS
lingmo_installer/core/: meson.build
lingmo_installer/core/locales/: __init__.py  (+15 more)
lingmo_installer/defaults/: conn_check.py  disk.py  encryption.py  keyboard.py  language.py  meson.build  network.py  nvidia.py  theme.py  timezone.py  vm.py  welcome.py
lingmo_installer/gtk/: confirm.ui  default-conn-check.ui  default-disk.ui  default-encryption.ui  default-keyboard.ui  default-language.ui  default-network.ui  default-nvidia.ui  default-theme.ui  default-timezone.ui  default-users.ui  default-vm.ui  default-welcome.ui  dialog-disk-confirm.ui  dialog-disk.ui  dialog-output.ui  dialog-poweroff.ui  dialog-recovery.ui  dialog.ui  done.ui  layout-preferences.ui  layout-yes-no.ui  progress.ui  tour.ui  widget-choice-expander.ui  widget-choice.ui  widget-disk.ui  widget-partition.ui  window-cpu.ui  window-ram.ui  window-unsupported.ui  window.ui
lingmo_installer/layouts/: meson.build  preferences.py  yes_no.py
lingmo_installer/utils/: builder.py  meson.build  processor.py  recipe.py  run_async.py
lingmo_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
lingmo_installer/windows/: dialog.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_unsupported.py
(+68 files in other folders)
